Java 17 warning