@@ -22,7 +22,9 @@ To use the extension, add the dependency to the target project:
 </dependency>
 ```
 
-:information_source: **Recommended Quarkus version: `2.6.2.Final`**
+:information_source: **Recommended Quarkus version: `2.6.2.Final` or higher **
+
+:warning: JBeret requires running with `--add-opens=java.base/java.security=ALL-UNNAMED` for JDK 17
 
 The Batch API and Runtime will be available out of the box. Please refer to the 
 [Batch documentation](https://jcp.org/en/jsr/detail?id=352), or the 
